--- a/README
+++ b/README
@@ -1,98 +1,66 @@
-{
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "e5584144-8ebf-457f-9f60-d29522701c6c",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "# British Airways -  Data Science Project\n",
-    "![Logo](images/logo.png)\n",
-    "This repository contains the analysis conducted during my internship at British Airways. The project aimed to gain insights from customer review data and build a predictive model to understand factors influencing buying behavior.\n",
-    "\n",
-    "## Table of Contents\n",
-    "- [Tasks](#tasks)\n",
-    "- [Repository Structure](#repository-structure)\n",
-    "- [Usage](#usage)\n",
-    "- [Contributing](#contributions)\n",
-    "\n",
-    "## Tasks\n",
-    "\n",
-    "### Task One: Customer Review Analysis\n",
-    "\n",
-    "In this task, I scraped and analyzed customer review data to uncover key insights and sentiments. From sentiment analysis to issue identification, we delved into the realm of customer reviews, extracting valuable insights to enhance the British Airways experience.\n",
-    "\n",
-    "### Task Two: Predictive Model Building\n",
-    "\n",
-    "For the second task, I developed a predictive model to understand the factors influencing buying behavior for British Airways. Leveraging machine learning techniques, the model aimed to predict customer preferences and behavior, helping the company tailor its services and offerings accordingly.\n",
-    "\n",
-    "## Repository Structure\n",
-    "\n",
-    "```\n",
-    "├── Task1 /                      # Directory for storing data files\n",
-    "│   ├── reviews_scraped.csv      # Dataset containing customer review data\n",
-    "│   └── review_analysis.ipynb    # Jupyter notebook for review analysis\n",
-    "│   └── report.pdf               # Report for review analysis\n",
-    "│   └── README                   # README for review analysis\n",
-    "├── Task2 /                      # Directory for storing data files\n",
-    "│   ├── customer_booking.csv     # Dataset containing customer booking data\n",
-    "│   └── booking_prediction.ipynb # Jupyter notebook for predictive modeling\n",
-    "│   └── report.pdf               # Report for predictive modeling\n",
-    "│   └── README                   # README for predictive modeling\n",
-    "├── LICENSE                      # License file\n",
-    "├── README                       # Main README file\n",
-    "```\n",
-    "\n",
-    "## Usage\n",
-    "\n",
-    "1. Clone this repository.\n",
-    "\n",
-    "2. Navigate to the project directory.\n",
-    "\n",
-    "3. Explore the notebooks in the `Task1/` and `Task2/` directories for detailed analysis and modeling steps.\n",
-    "\n",
-    "4. Access the datasets in the respective directories for conducting your own analysis.\n",
-    "\n",
-    "5. Refer to the reports in the `Task1/` and `Task2/` directories for insights and findings from each task.\n",
-    "\n",
-    "## Contributing\n",
-    "Contributions are always welcome!\n",
-    "Please adhere to this project's `code of conduct`.\n",
-    "\n",
-    "## License\n",
-    "[MIT](https://choosealicense.com/licenses/mit/)\n",
-    "\n",
-    "## 🔗 Links\n",
-    "[![portfolio](https://img.shields.io/badge/my_portfolio-000?style=for-the-badge&logo=ko-fi&logoColor=white)](https://katherineoelsner.com/)\n",
-    "[![linkedin](https://img.shields.io/badge/linkedin-0A66C2?style=for-the-badge&logo=linkedin&logoColor=white)](https://www.linkedin.com/)\n",
-    "\n",
-    "## Authors\n",
-    "\n",
-    "- [@octokatherine](https://www.github.com/octokatherine)\n",
-    "---"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.7"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+---
+
+# British Airways -  Data Science Project
+![Logo](.images/logo.png)
+This repository contains the analysis conducted during my internship at British Airways. The project aimed to gain insights from customer review data and build a predictive model to understand factors influencing buying behavior.
+
+## Table of Contents
+- [Tasks](#tasks)
+- [Repository Structure](#repository-structure)
+- [Usage](#usage)
+- [Contributing](#contributions)
+
+## Tasks
+
+### Task One: Customer Review Analysis
+
+In this task, I scraped and analyzed customer review data to uncover key insights and sentiments. From sentiment analysis to issue identification, we delved into the realm of customer reviews, extracting valuable insights to enhance the British Airways experience.
+
+### Task Two: Predictive Model Building
+
+For the second task, I developed a predictive model to understand the factors influencing buying behavior for British Airways. Leveraging machine learning techniques, the model aimed to predict customer preferences and behavior, helping the company tailor its services and offerings accordingly.
+
+## Repository Structure
+
+```
+├── Task1 /                      # Directory for storing data files
+│   ├── reviews_scraped.csv      # Dataset containing customer review data
+│   └── review_analysis.ipynb    # Jupyter notebook for review analysis
+│   └── report.pdf               # Report for review analysis
+│   └── README                   # README for review analysis
+├── Task2 /                      # Directory for storing data files
+│   ├── customer_booking.csv     # Dataset containing customer booking data
+│   └── booking_prediction.ipynb # Jupyter notebook for predictive modeling
+│   └── report.pdf               # Report for predictive modeling
+│   └── README                   # README for predictive modeling
+├── LICENSE                      # License file
+├── README                       # Main README file
+```
+
+## Usage
+
+1. Clone this repository.
+
+2. Navigate to the project directory.
+
+3. Explore the notebooks in the `Task1/` and `Task2/` directories for detailed analysis and modeling steps.
+
+4. Access the datasets in the respective directories for conducting your own analysis.
+
+5. Refer to the reports in the `Task1/` and `Task2/` directories for insights and findings from each task.
+
+## Contributing
+Contributions are always welcome!
+Please adhere to this project's `code of conduct`.
+
+## License
+[MIT](https://choosealicense.com/licenses/mit/)
+
+## 🔗 Links
+[![portfolio](https://img.shields.io/badge/my_portfolio-000?style=for-the-badge&logo=ko-fi&logoColor=white)](https://katherineoelsner.com/)
+[![linkedin](https://img.shields.io/badge/linkedin-0A66C2?style=for-the-badge&logo=linkedin&logoColor=white)](https://www.linkedin.com/)
+
+## Authors
+
+- [@octokatherine](https://www.github.com/octokatherine)
+---
